fix 3 column wrap direction

--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -374,7 +374,7 @@ main .section>div.columns-wrapper {
 
   .columns-3-cols {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
   }
 
   .columns.layout-20-80.partners-list-columns ul li picture{
